examples/compiler_errors/und_lab.gs
nop	Hello

lab	main
jmp	mian	Something's wrong here.
